--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -83,6 +83,7 @@ password will be generated </label>
 <select name="keyboard" >
             <option value="gb"> English UK</option>
             <option value="us" selected="selected"> English US</option>
+	    <option value="fi"> Finnish / Suomi</option>
             <option value="fr"> French / Français</option>
             <option value="de"> German / Deutsch</option>
             <option value="pl"> Polish / Polski</option>
