--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -102,6 +102,7 @@
 					<select name="keyboard" >
 						<option value="gb"> English UK</option>
 						<option value="us" selected="selected"> English US</option>
+						<option value="fi"> Finnish / Suomi</option>
 						<option value="fr"> French / Français</option>
 						<option value="de"> German / Deutsch</option>
 						<option value="pl"> Polish / Polski</option>
