--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -62,7 +62,7 @@ Do you manage your configuration space under version control?
 
 How big is your config space (Mbytes, # of files)? 
 cd <to your config space> (/srv/fai/config by default)
-du -sh --exclude=.svn --exclude=basefiles
+du -sh --exclude=.svn --exclude=.git --exclude=basefiles
 find ! -type d | grep -v svn|grep -v cvs|fgrep -v .git|wc -l
 
 How many files do you have in ../config/files?
