--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,33 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous
+<br><b>Date:</b> Sun, 18 Apr 2021 15:10:53 +0200
+
+<pre>
+Are you using the FAI.me build service? no
+How many hosts have you installed using fai? <b>hundreds (> 400)</b>
+Which version of fai are you using? <b>5.9.4</b>
+Which types of hosts are you installing with fai? industrial quality inspection systems.
+
+How do you boot your hosts? using FAI-CD from USB stick
+Which version are you using as your install kernel? plain debian 8 and debian 10
+Does the default install kernel recognize all your hardware? not sure, I didn't notice anything missing
+Which drivers are missing? na.
+
+Do you manage your configuration space under version control? yes.
+How big is your config space (Mbytes, # of files)? 5MB , 154 files
+How many files do you have in ../config/files? 145
+What types of scripts are you using for local customization? bash + python.
+
+<b>What is the business of your company/organisation?</b> Industrial Automation
+<br><b>Additional comments:</b>
+Our repo is 5MB , 154 files. The way we do this, is we run 'fai-setup' and overwrite anything
+that we store, by copying our repo-content into /srv/fai/config
+That way, we take the defaults, whatever they are, and change only what we need to the change.
+</pre> <HR>
+
+
 <b>From:</b> Ondrej Jombik, ceo aatt platon dot net
 <br><b>Date:</b> Wed, 25 Nov 2020 04:00:42 +0100 (CET)
 <pre>
