Main-Features Liste mit Punkten statt Häkchen

--- a/features/index.html
+++ b/features/index.html
@@ -31,210 +31,168 @@
       <div class="container">
         <div class="row">
           <h4>What is FAI? Main Features</h4>
+          <ul class="browser-default">
+            <li>
+              A tool for automated unattended installation. Lazy system administrators like it.
+            </li>
+            <li>
+              Remote network installation of different Linux flavors
+            </li>
+            <li>
+              Easy-to-use centralized management system for your Linux deployment
+            </li>
+            <li>
+              FAI profiles extend the FAI class concept
+            </li>
+            <li>
+              FAI shows a curses based menu for selecting a profile
+            </li>
+            <li>
+              It's fast. It only takes a few minutes for a complete installation.
+            </li>
+            <li>
+              Scalable. FAI users manage their computer infrastructures starting from a few computers up to several thousands of machines.
+            </li>
+            <li>
+              Easy creation of customized Linux installation media like CD, DVD or USB stick
+            </li>
+            <li>
+              Autodiscover of the FAI install server when doing a network installation
+            </li>
+            <li>
+              Different hardware and different configuration requirements are easy to establish using FAI. You do not need to repeat information that is shared among several machines.
+            </li>
+            <li>
+              Using the FAI class concept, you can group a bunch of similar machines.
+            </li>
+            <li>
+              Installation targets: desktops, servers, notebooks, Beowulf cluster, rendering or web server farm, Linux laboratory or classroom.
+            </li>
+            <li>
+              Linux rollout, mass installation and automated server provisioning are additional topics of FAI.
+            </li>
+            <li>
+              FAI is lightweight. No special daemons are running, no database setup is needed.<br>It's architecture independent, since it consists only of shell, Perl and Cfengine scripts.
+            </li>
+            <li>
+              Besides initial installations, it is also used for daily maintenance.
+            </li>
+            <li>
+              Creating customized chroot environments, also cross-architecture for e.g. for embedded devices
+            </li>
+            <li>
+              Building your own disk image for cloud instances, also cross-architecture
+            </li>
+            <li>
+              Cloning machines using disk images is supported
+            </li>
+            <li>
+              Also bare-metal provisioning and deploying virtual machines is supported
+            </li>
+            <li>
+              Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or Jumpstart for SUN Solaris, FAI is much more flexible.<br>You can tune every small part of your configuration to your local needs using hooks.
+            </li>
+            <li>
+              More technical information in the
+              <a href=/poster>flyer and poster</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <h4>Other projects using FAI</h4>
           <ul>
             <li>
               <span class="valign-wrapper">
                 <i class="material-icons">done</i>&nbsp;<span>
-                  A tool for automated unattended installation. Lazy system administrators like it.
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Remote network installation of different Linux flavors</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Easy-to-use centralized management system for your Linux deployment.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      FAI profiles extend the FAI class concept</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      FAI shows a curses based menu for selecting a profile</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      It's fast. It only takes a few minutes for a complete installation.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Scalable. FAI users manage their computer infrastructures starting from a few computers up to several thousands of machines.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Easy creation of customized Linux installation media like CD, DVD or USB stick</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Autodiscover of the FAI install server when doing a network installation</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Different hardware and different configuration requirements are easy to establish using FAI. You do not need to repeat information that is shared among several machines.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Using the FAI class concept, you can group a bunch of similar machines.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Installation targets: desktops, servers, notebooks, Beowulf cluster, rendering or web server farm, Linux laboratory or classroom.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Linux rollout, mass installation and automated server provisioning are additional topics of FAI.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      FAI is lightweight. No special daemons are running, no database setup is needed.<br>It's architecture independent, since it consists only of shell, Perl and Cfengine scripts.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Besides initial installations, it is also used for daily maintenance.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Creating customized chroot environments, also cross-architecture for e.g. for embedded devices</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Building your own disk image for cloud instances, also cross-architecture</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Cloning machines using disk images is supported</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Also bare-metal provisioning and deploying virtual machines is supported</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or Jumpstart for SUN Solaris, FAI is much more flexible.<br>You can tune every small part of your configuration to your local needs using hooks.</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      More technical information in the
-                      <a href=/poster>flyer and poster</a></span></span>
-                </li>
-              </ul>
-            </div>
+                  <a href="https://wiki.debian.org/DebianLAN">DebianLAN</a></span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">done</i>&nbsp;<span>
+                  <a href="http://openqrm.org/">OpenQRM</a></span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">done</i>&nbsp;<span>
+                  <a href="https://qlustar.com/">Qlustar</a>. The Qlustar Installer CD is a customized FAI-CD</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">done</i>&nbsp;<span>
+                  <a href="https://www.fusiondirectory.org/">FusionDirectory</a>
+                  is a fork of GOsa</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">done</i>&nbsp;<span>
+                  <a href="https://oss.gonicus.de/labs/gosa/">GOsa</a></span></span>
+            </li>
+          </ul>
+        </div>
 
-            <div class="row">
-              <h4>Other projects using FAI</h4>
-              <ul>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      <a href="https://wiki.debian.org/DebianLAN">DebianLAN</a></span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      <a href="http://openqrm.org/">OpenQRM</a></span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      <a href="https://qlustar.com/">Qlustar</a>. The Qlustar Installer CD is a customized FAI-CD</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      <a href="https://www.fusiondirectory.org/">FusionDirectory</a>
-                      is a fork of GOsa</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">done</i>&nbsp;<span>
-                      <a href="https://oss.gonicus.de/labs/gosa/">GOsa</a></span></span>
-                </li>
-              </ul>
-            </div>
+        <div class="row">
+          <h4>FAI Installation Steps</h4>
+          <ul>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Network boot via PXE</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Receive configuration data via HTTP, NFS, svn or git</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Run scripts to determine FAI classes and variables</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Partition local hard disks and create RAID, LVM configuration and the file systems</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Install and configure software packages</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Customize OS and software to your local needs</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  Reboot freshly installed machine</span></span>
+            </li>
+            <li>
+              <span class="valign-wrapper">
+                <i class="material-icons">arrow_forward</i>&nbsp;<span>
+                  All this can also be done via an unattended CD installation</span></span>
+            </li>
+          </ul>
+        </div>
 
-            <div class="row">
-              <h4>FAI Installation Steps</h4>
-              <ul>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Network boot via PXE</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Receive configuration data via HTTP, NFS, svn or git</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Run scripts to determine FAI classes and variables</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Partition local hard disks and create RAID, LVM configuration and the file systems</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Install and configure software packages</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Customize OS and software to your local needs</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      Reboot freshly installed machine</span></span>
-                </li>
-                <li>
-                  <span class="valign-wrapper">
-                    <i class="material-icons">arrow_forward</i>&nbsp;<span>
-                      All this can also be done via an unattended CD installation</span></span>
-                </li>
-              </ul>
-            </div>
+        <div class="row">
+          <h4>FAI History</h4>
+          FAI is rock-solid. It's now more than 16 years old. FAI was started in 1999 at the University of Cologne, when
+          <a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas</a>
+          had to organize an installation of a Linux cluster. Today, FAI is regularly used in
+          <a href="/reports/">varying environments</a>, ranging from a dozen machines up to several thousands machines.
+        </div>
+      </div>
+    </main>
 
-            <div class="row">
-              <h4>FAI History</h4>
-              FAI is rock-solid. It's now more than 16 years old. FAI was started in 1999 at the University of Cologne, when
-              <a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas</a>
-              had to organize an installation of a Linux cluster. Today, FAI is regularly used in
-              <a href="/reports/">varying environments</a>, ranging from a dozen machines up to several thousands machines.
-            </div>
-          </div>
-        </main>
-
-        <footer class="page-footer grey darken-3">
-          <!--#include virtual="/footer.html" -->
-        </footer>
-        <!--JavaScript at end of body for optimized loading-->
-        <script src="/js/materialize.js"></script>
-        <script>
-          M.AutoInit();
-        </script>
-      </body>
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
+  </body>
