--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -37,22 +37,20 @@ contact before you start working.
 <br>
 <br>
 <br>
-<h1>Topics for FAI 5.X</h1>
+<h1>Topics for FAI 6.X</h1>
 <ul>
 <li> --- TODO ---
+<li> partition label and partition uuid support in setup-storage
+<li> support target release in package_config
 <li> add Ubuntu support to FAI.me service
-<li> more crazy features for FAI.me
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
+<li> support for user defined postinst script with FAI.me service
 <li> UEFI support for fai-cd
 <li> add grub cmdline options to FAI.me service
-<li> template engine for fcopy, for e.g simple variable substitution?
-<li> support for building cross architecture disk images, e.g. ARM 64bit
 <li> new command for building cloud images with FAI
 <li> btrfs and NVMe support for setup-storage
 <li> replace live-boot with dracut in fai-cd
-<li> support for cloning machines with file system images
-<li> major update of FAI guide
 <li> --- LONG TERM ---
 <li> zfs support?
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -62,7 +60,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Wed Jan  8 13:04:21 CET 2020
+  Sun, 30 May 2021 10:06:36 +0200
 </ADDRESS>
 
       </div>
