--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,34 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+
+<b>From:</b> Jan Novak,  repcom at_gmail dot-com
+<br><b>Date:</b> Tue, 18 May 2021 08:25:38 +0200
+<pre>
+How many hosts have you installed using fai? <b></b> at this point only a view test server, in the future all new host in our system
+
+Are you using the FAI.me build service? Yes
+Which version of fai are you using? <b>5.10.1+3</b>
+Which version are you using as your install kernel? plain Debian kernel
+Which types of hosts are you installing with fai? cluster nodes, web server, server
+
+How do you boot your hosts? Direct from ISO (VM's), in the future also from USB Stick
+Does the default install kernel recognize all your hardware? at the moment, yes!
+Which drivers are missing? non-free drivers are importing because of some special LAN drivers
+Do you manage your configuration space under version control? no
+
+How big is your config space (Mbytes, # of files)? using the FAI.me config space
+How many files do you have in ../config/files? see above
+
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> (sub) IT of a big printing company - kuhse.media
+<br><b>Additional comments:</b>
+We are testing at the moment.
+Everything was a VM installation (proxmox)
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Sun, 18 Apr 2021 15:10:53 +0200
 
