--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
+<li>[May 24, 2021] FAI 5.10.3 released</a></li>
 <li>[Apr 17, 2021] FAI 5.10.1+3 released, new images are available</a></li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
 <li>[Oct 11-16 2019] Thomas was in Boston, MA joining the Debian Cloud sprint</a></li>
