--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,24 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous
+<br><b>Date:</b> Tue, 8 Jun 2021 12:46:12 +0000
+<pre>
+How many hosts have you installed using fai? <b>14</b>
+Which version of fai are you using? <b>5.10.3</b>
+Which types of hosts are you installing with fai? Proxys
+
+Which version are you using as your install kernel? plain Debian Kernel
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? Yes it does
+Which drivers are missing? None
+How big is your config space (Mbytes, # of files)? 8.7 Mbytes
+What types of scripts are you using for local customization? Shell
+
+<b>What is the business of your company/organisation?</b> Full IT-Service Company
+</pre> <HR>
+
+
 
 <b>From:</b> Jan Novak,  repcom at_gmail dot-com
 <br><b>Date:</b> Tue, 18 May 2021 08:25:38 +0200
