--- a/references/index.html
+++ b/references/index.html
@@ -148,6 +148,8 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 <img class="imgframe" alt="FAI user" src="pics/sagemcom.png" ></a>
 <a href="https://platon.net">
 <img class="imgframe" alt="FAI user" src="pics/platon-technologies.png" ></a>
+<a href="https://www.ocadogroup.com/technology/technology-pioneers">
+<img class="imgframe" alt="FAI user" src="pics/ocado.png" ></a>
 
 </span>
 
