add zstd feature

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -42,6 +42,7 @@ contact before you start working.
 <li> --- TODO ---
 <li> partition label and partition uuid support in setup-storage
 <li> support target release in package_config
+<li> use zstd instead of gzip
 <li> add Ubuntu support to FAI.me service
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
@@ -58,7 +59,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-  Tue, 01 Jun 2021 12:35:18 +0200
+  Wed, 30 Jun 2021 21:37:39 +0200
 </ADDRESS>
 
       </div>
