--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,69 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> someone, @ ocado dot com
+<br><b>Date:</b> Wed, 21 Jul 2021 12:35:05 +0100
+<pre>
+How many hosts have you installed using fai? <b>Many thousands</b>
+Which version of fai are you using? <b>5.x</b>
+Which version are you using as your install kernel? Standard Debian Testing
+
+Which types of hosts are you installing with fai?  Data Centre and Edge compute
+
+How do you boot your hosts? PXE
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? None
+Do you manage your configuration space under version control? Yes
+
+How big is your config space (Mbytes, # of files)? 1GB including basefiles
+How many files do you have in ../config/files? 40
+What types of scripts are you using for local customization? Puppet, Shell, Python
+
+<b>What is the business of your company/organisation?</b> <a href="https://www.ocadogroup.com/technology/technology-pioneers">Ocado Technology</a>, a technology company
+<br><b>Additional comments:</b>
+To automate data centre builds.
+
+I also want to take the opportunity to say thanks for all the work you
+do on the project. It has been a key part of our infra build solution
+for quite some years. I think the key to it's success for us is the flexibility.
+</pre> <HR>
+
+
+<b>From:</b> Sinh Lam, first.last xxxxxxxx dot-com
+<br><b>Date:</b> Wed, 21 Jul 2021 11:01:53 +0200
+<pre>
+How many hosts have you installed using fai? <b>10k+</b>
+  - Previous employer deploys 10s of thousands of servers worldwide
+  - current employer currently deploys 100s of "servers".
+
+Which version of fai are you using? <b>5.9.1</b>
+Which version are you using as your install kernel? current stock kernel
+
+Which types of hosts are you installing with fai?
+  - servers. Future plan is to use this to do desktop/notebook provisioning.
+
+How do you boot your hosts? PXE/DHCP
+  Future plan to use FAI-CD/USB to do on-site maintenance deployments
+  (basically re-provisioning servers on customer sites)
+
+Does the default install kernel recognize all your hardware? no
+Which drivers are missing? realtek wifi drivers
+Do you manage your configuration space under version control? everything in the config directory is version controlled using GIT
+How big is your config space (Mbytes, # of files)? 195M, # 102
+How many files do you have in ../config/files? 37
+
+What types of scripts are you using for local customization? shell.
+  future plan includes incorporating salt/ansible to do customizations.
+
+<b>What is the business of your company/organisation?</b> Robotics
+<br><b>Additional comments:</b>
+Due to past experience with FAI, it was almost imperative to bring FAI with me to my current employer.
+The introduction of FAI allowed the organization to provision/re-provision servers en-masse as well as
+reducing provisioning time from 2+hrs to ~ 5 minutes. The process has also been
+simplified so that anyone can perform this function.
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Tue, 8 Jun 2021 12:46:12 +0000
 <pre>
