update to bullseye

--- a/download/index.html
+++ b/download/index.html
@@ -42,7 +42,7 @@ The FAI software is divided in several packages:
 <li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list:
 <p>
 <div class="featurebox"><h3>
-<pre>deb https://fai-project.org/download stretch koeln</pre>
+<pre>deb https://fai-project.org/download bullseye koeln</pre>
 </h3></div>
 or
 <p>
